# nezumi-ai

./: .gitignore  DETAILED_PLAN.md  LICENSE.md  LITERT_IMPROVEMENTS.md  NOTICE  README.md  RESOURCE_MANAGEMENT_PHASE11.md  UIINTEGRATION_SAMPLE.kt  UI_INTEGRATION_GUIDE.md  build_log.txt  build_output.txt  gemma-chat-mockup.html  gradle.properties  settings.gradle.kts  test.txt  window_dump.xml
.claude/: settings.local.json
.github/workflows/: nezumi-ai-ci-cd.yml
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/nezumi_ai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: LICENSE.md
app/src/main/cpp/: CMakeLists.txt  NezumiRnLlamaJni.cpp
app/src/main/cpp/llama_rn/: ggml-ext.h  rn-completion.cpp  rn-llama.cpp  rn-llama.h
app/src/main/cpp/llama_rn/ggml-hexagon/htp/: htp-msg.h
app/src/main/cpp/llama_rn/ggml-hexagon/htp/v73/: htp_iface.h  htp_iface_stub.c
app/src/main/cpp/llama_rn/tools/mtmd/: clip.cpp
app/src/main/java/com/nezumi_ai/: FirstFragment.kt  MainActivity.kt  MyApplication.kt  SecondFragment.kt
app/src/main/java/com/nezumi_ai/data/alarm/: AlarmReceiver.kt
app/src/main/java/com/nezumi_ai/data/database/: NezumiAiDatabase.kt
app/src/main/java/com/nezumi_ai/data/inference/: AIInferenceEngine.kt  BackendResourceManager.kt  BitmapMemoryPool.kt  CacheManager.kt  CpuCompatibility.kt  Gemma4ThinkingParser.kt  GemmaE2BEngine.kt  GgufInferenceEngine.kt  HfAuthManager.kt  HfOAuthManager.kt  InferenceConfig.kt  InferenceJobController.kt  InferenceStreamProtocol.kt  LiteRtLmEngine.kt  LlmMultimodalAudioHelper.kt  MemoryObserver.kt  ModelDownloadWorker.kt  ModelFileManager.kt  ModelManager.kt  NezumiLiteRtTools.kt  ProjectConfig.kt  PromptBuilder.kt  SessionResourceManager.kt  StringExtensions.kt  ToolCallState.kt  ToolPreferences.kt  ToolResultCard.kt
app/src/main/java/com/nezumi_ai/data/media/: LlmMultimodalAudioHelper.kt  MessageMediaStore.kt
app/src/main/java/com/nezumi_ai/data/model/: GroupedChatSessions.kt
app/src/main/java/com/nezumi_ai/data/repository/: ChatSessionRepository.kt  MessageRepository.kt  SettingsRepository.kt
app/src/main/java/com/nezumi_ai/utils/: ImportedModelCapabilityStore.kt  PreferencesHelper.kt  WelcomeDialog.kt
app/src/main/res/color/: backend_toggle_background.xml  backend_toggle_stroke.xml  backend_toggle_text.xml
app/src/main/res/drawable/: bg_back_button.xml  bg_delete_button.xml  bg_input_field.xml  bg_message_ai.xml  bg_message_user.xml  bg_tool_result_card.xml  bg_tool_result_card_error.xml  deployed_code_24.xml  ic_access_time.xml  ic_add.xml  ic_alarm.xml  ic_alarm_off.xml  ic_back.xml  ic_battery_std.xml  ic_delete.xml  ic_flashlight_off.xml  ic_flashlight_on.xml  ic_launcher_foreground.xml  ic_lock.xml  ic_menu.xml  ic_timer.xml  ic_timer_off.xml  plumbing_24.xml  settings_24.xml
app/src/main/res/layout/: activity_main.xml  dialog_welcome.xml  fragment_chat.xml  fragment_license.xml  fragment_session_list.xml  fragment_settings.xml  item_drawer_session.xml  item_drawer_session_label.xml  item_license.xml  item_message_ai.xml  item_message_user.xml  item_session.xml  item_tool_result_card.xml
app/src/main/res/menu/: menu_main.xml  menu_media_select.xml  nav_drawer_menu.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  strings_license.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/nezumi_ai/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+37 files in other folders)
